tests/paczka1/small_fuzzy/87125971.err
Error in line 3: WZjflngAA S149 80,3
Error in line 13: WZjflngAA S149 23,2
